kustomizations/bentopdf/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bentopdf
  name: bentopdf
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bentopdf
  strategy: {}
  template:
    metadata:
      labels:
        app: bentopdf
    spec:
      containers:
        - image: ghcr.io/alam00000/bentopdf:2.8.7@sha256:165113f4579cc61ea353ad0597ed510cc2101ef879ec5e91875a3df0c0b219a0
          name: bentopdf
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "300m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          securityContext:
            allowPrivilegeEscalation: false
